# boostTestCppMacOs

./: .gitignore  CMakeLists.txt  README.md  genXcode.sh
src/app/: main.cpp
src/include/: Calc.hpp
src/main/: Calc.cpp
src/test/: CalcTest.cpp
